@@ -13,7 +13,10 @@
 		html.table.attributes="border=1", 
 		print.results=TRUE, 
         format.args=NULL, 
-		short.caption=NULL, ...)}
+		short.caption=NULL, 
+		rotate.rownames = FALSE,
+		rotate.colnames = FALSE,
+		...)}
 \arguments{
   \item{x}{An object of class \code{"xtable"}.}
   \item{type}{Type of table to produce.  Possible values for \code{type} are \code{"latex"} or \code{"html"}.
@@ -49,6 +52,8 @@
   \item{print.results}{If \code{TRUE}, the generated table is printed to standard output.  Set this to \code{FALSE} if you will just be using the character vector that is returned invisibly.}
   \item{format.args}{List of arguments for the \code{formatC} function.  For example, standard German number separators can be specified as \code{format.args=list(big.mark = "'", decimal.mark = ","))}.}
   \item{short.caption}{A "short caption" can be specified that gets used as the table descriptor when LaTeX generates a "List of Tables".}
+  \item{rotate.rownames}{If \code{TRUE}, the row names are displayed vertically in LaTeX.}
+  \item{rotate.colnames}{If \code{TRUE}, the column names are displayed vertically in LaTeX.}
   \item{...}{Additional arguments.  (Currently ignored.)}
 }
 \details{
